@@ -69,7 +69,6 @@ DECL|function|operator <<
 DECL|function|operator <<
 DECL|function|operator <<
 DECL|function|operator <<
-DECL|function|operator <<
 DECL|function|operator >>
 DECL|function|operator >>
 DECL|function|operator >>
